fix margin for calendar on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -77,3 +77,10 @@
   background-color: rgb(255, 166, 0);
   color: black;
 }
+
+@media only screen and (max-width: 600px) {
+  #calendarContainer {
+    padding: 1rem;
+    padding-top: 0rem;
+  }
+}
